Colaboratory を使用して作成しました

--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/KoNozaki/quantmacro-hw/blob/main/assignment2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "44973271",
       "metadata": {
         "id": "44973271"
@@ -89,12 +99,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "GtRo3FKhqpUg",
-        "outputId": "d9d82a46-0eb3-46f8-884d-4d23db657e3d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "GtRo3FKhqpUg",
+        "outputId": "d9d82a46-0eb3-46f8-884d-4d23db657e3d"
       },
       "id": "GtRo3FKhqpUg",
       "execution_count": 25,
@@ -353,12 +363,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "T_eZhBtRkMQI",
-        "outputId": "26f64508-d6d7-4ff2-c1d4-33e6a9b1beb9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "T_eZhBtRkMQI",
+        "outputId": "26f64508-d6d7-4ff2-c1d4-33e6a9b1beb9"
       },
       "id": "T_eZhBtRkMQI",
       "execution_count": 28,
@@ -499,11 +509,11 @@
         "print(summary)"
       ],
       "metadata": {
-        "id": "v2mNRxQtjbVb",
-        "outputId": "a6d94f76-03a0-4640-f9ed-16220979141d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "v2mNRxQtjbVb",
+        "outputId": "a6d94f76-03a0-4640-f9ed-16220979141d"
       },
       "id": "v2mNRxQtjbVb",
       "execution_count": 29,
@@ -540,7 +550,8 @@
       "version": "3.8.16"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
