変数追加で別の方向性を試した

--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -31,6 +31,120 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# 17\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "7XOjXHF53lEM"
+      },
+      "id": "7XOjXHF53lEM"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "\n",
+        "# Load data\n",
+        "pwt10 = pd.read_stata('https://dataverse.nl/api/access/datafile/354098')\n",
+        "# Filter and select relevant columns\n",
+        "data = pwt10.loc[pwt10['country'].isin([\"France\",\"Germany\",\"Canada\",\"Italy\",\"Japan\",\"United Kingdom\",\"United States\"])][['year', 'countrycode', 'rgdpna', 'rkna', 'emp', 'labsh']]\n",
+        "data = data.loc[(data['year'] >= 1995) & (data['year'] <= 2019)].dropna()\n",
+        "# Calculate additional columns\n",
+        "data['a'] = 1 - data['labsh']  # 資本の所得割合（Capital's Share of Income）\n",
+        "data['KL'] = (data['rkna']**data['a']) * (data['emp']**(1 - data['a']))\n",
+        "data['A'] = data['rgdpna'] / ((data['rkna']**data['a']) * (data['emp']**(1 - data['a'])))  # 総要素生産性（Total Factor Productivity, TFP）\n",
+        "data['Y'] = data['rgdpna']  # 国内総生産（Gross Domestic Product, GDP）\n",
+        "\n",
+        "data['logy'] = np.log(data['rgdpna'] / data['emp'])  # Log GDP per worker\n",
+        "data['logk'] = np.log(data['KL'] / data['emp'])  # Log Capital per worker\n",
+        "data['logA'] = np.log(data['A'])\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Calculate time differences\n",
+        "data['dt'] = data['year'].diff()  # Time difference\n",
+        "\n",
+        "\n",
+        "# Calculate differentials\n",
+        "data['dlogy_dt'] = data['logy'].diff() / data['dt']\n",
+        "data['dlogk_dt'] = data['logk'].diff() / data['dt']\n",
+        "data['dlogA_dt'] = data['logA'].diff() / data['dt']\n",
+        "\n",
+        "\n",
+        "# 年度でソート\n",
+        "data = data.sort_values('year')\n",
+        "\n",
+        "# ISOコードでグループ化\n",
+        "grouped_data = data.groupby('countrycode')\n",
+        "\n",
+        "\n",
+        "# TFP成長率と資本深化率を計算\n",
+        "data['TFP_growth'] = data['dlogA_dt'] * 100  # TFP成長率\n",
+        "data['capital_deepening'] = data['dlogk_dt'] * 100  # 資本深化率\n",
+        "data['GDP_growth'] = data['dlogy_dt'] * 100  # 経済成長率（GDP成長率）\n",
+        "\n",
+        "\n",
+        "# 欠損値を削除\n",
+        "data = data.dropna()\n",
+        "\n",
+        "\n",
+        "# サマリー統計量を計算\n",
+        "summary = data.groupby('countrycode').agg({'GDP_growth': 'mean',\n",
+        "                                           'capital_deepening': 'mean',\n",
+        "                                           'TFP_growth': 'mean'})\n",
+        "\n",
+        "\n",
+        "# TFP寄与率と資本深化寄与率を計算\n",
+        "summary['TFP寄与率'] = summary['TFP_growth'] / summary['GDP_growth'] * 100\n",
+        "summary['資本深化寄与率'] = summary['capital_deepening'] / summary['GDP_growth'] * 100\n",
+        "\n",
+        "# 結果を表示\n",
+        "print(summary)"
+      ],
+      "metadata": {
+        "id": "IHJcvMmi3z68",
+        "outputId": "9cc72c34-f0b6-47b7-aa14-05ceddb5ef45",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "IHJcvMmi3z68",
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "             GDP_growth  capital_deepening  TFP_growth       TFP寄与率  \\\n",
+            "countrycode                                                           \n",
+            "CAN            0.887700           0.239437    0.648264    73.027397   \n",
+            "DEU            0.662448           0.161122    0.501324    75.677399   \n",
+            "FRA            0.816542           0.603822    0.212720    26.051325   \n",
+            "GBR            1.036837           1.311810   -0.274969   -26.520018   \n",
+            "ITA           -0.045964           0.503274   -0.549236  1194.914917   \n",
+            "JPN            0.757615           0.036508    0.721106    95.181152   \n",
+            "USA            1.440635           0.605465    0.835166    57.972073   \n",
+            "\n",
+            "                 資本深化寄与率  \n",
+            "countrycode               \n",
+            "CAN            26.972775  \n",
+            "DEU            24.322161  \n",
+            "FRA            73.948730  \n",
+            "GBR           126.520309  \n",
+            "ITA         -1094.921265  \n",
+            "JPN             4.818804  \n",
+            "USA            42.027660  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# 16\n",
         "\n",
         "授業コード無視してGPT"
@@ -94,7 +208,7 @@
         }
       },
       "id": "z9-mnwYUzROm",
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,7 +344,7 @@
         }
       },
       "id": "VNqTNOMIsSAY",
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,7 +497,7 @@
         }
       },
       "id": "jY0-Vn_Yqpfb",
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,12 +645,11 @@
         "id": "yQ1wW2x1m0Uv",
         "outputId": "5dbbb793-0e5e-4839-952a-342d9250e510",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "id": "yQ1wW2x1m0Uv",
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -659,7 +772,7 @@
         }
       },
       "id": "flMBLsGUkW7O",
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -771,12 +884,11 @@
         "id": "Ybd87ALchct9",
         "outputId": "5106c576-1177-4207-ddb7-4f66de58ea8f",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "id": "Ybd87ALchct9",
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -895,7 +1007,7 @@
         }
       },
       "id": "5nqYgayBfrZs",
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1049,7 +1161,7 @@
         }
       },
       "id": "FofP4LjpY9wS",
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1192,7 +1304,7 @@
         }
       },
       "id": "V3rnlDeqW5RB",
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1334,7 +1446,7 @@
         }
       },
       "id": "RF-PFdLRS2vK",
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1476,7 +1588,7 @@
         }
       },
       "id": "kTnZnhkdPA0X",
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1625,7 +1737,7 @@
         }
       },
       "id": "NsrpODOdOnDG",
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "metadata": {
@@ -1768,7 +1880,7 @@
         }
       },
       "id": "14ezRR6VE1Ir",
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1893,7 +2005,7 @@
         "outputId": "8b3b85e4-a07e-497d-ea8d-dd1d716d3570"
       },
       "id": "GtRo3FKhqpUg",
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2140,14 +2252,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "T_eZhBtRkMQI",
         "outputId": "298c0ed6-ac49-4f39-e73f-1af8b7cb6689"
       },
       "id": "T_eZhBtRkMQI",
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2295,7 +2406,7 @@
         "outputId": "7cb252f9-f5dd-4126-bb16-40e15625bb0c"
       },
       "id": "v2mNRxQtjbVb",
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
